--- a/css/2.css
+++ b/css/2.css
@@ -80,7 +80,7 @@ ul {
   padding-left: 55px;
 }
 .column li {
-  list-style-image: url("/img/marker.svg");
+  list-style-image: url("../img/marker.svg");
   margin-bottom: 10px;
   line-height: 50px; /* Добавляем расстояние между строками в списке */
   padding-left: 10px;
